# floorplan-studies

./: .gitignore  hello.py  pyproject.toml
scripts/: folder_structure.sh
src/studies/: quick_paths.py
src/studies/graphbem/generation/graphbem/: cali_analysis.py  data_helpers.py
src/studies/three_plan/: combinations.py  export.py  interfaces.py  paths.py  st_graph.py  study.py
src/studies/three_plan/generation/: export.py  generate.py
static/three_plan/_02_plans/250731_connectivities/: connectivites.json
tests/: test_graphbem.py  test_threeplan.py
