[project]
name = "studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graph2plan>=0.1.1",
    "plan2eplus>=0.1.0",
    "pyprojroot>=0.3.0",
    "rich>=14.1.0",
    "utils4plans>=0.1.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
